@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-30T00:54:03Z",
-  "count_outdated" : 262,
-  "uniques_outdated" : 195,
+  "timestamp" : "2025-10-04T00:49:54Z",
+  "count_outdated" : 263,
+  "uniques_outdated" : 196,
   "count" : 267,
   "uniques" : 200,
   "clones" : [
-    {
-      "timestamp": "2025-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-20T00:00:00Z",
       "count": 1,
